packages/go/include/xberg.h

typedef uint64_t XBERGAlefHandle;
/**
 * Free a `MetaSchema` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_meta_schema_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_meta_schema_compile(const char *meta_schema_json);
/**
 * Validate `raw` against the meta-schema and deserialize into a `Preset`,
 * stamping the fingerprint over the canonical file bytes.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
XBERGAlefHandle xberg_meta_schema_parse_preset(XBERGAlefHandle this_,
                                               const char *path,
                                               const uint8_t *raw,
                                               uintptr_t raw_len);
/**
 * Free a `Registry` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_registry_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_registry_load_embedded(void);
/**
 * Look up a preset by its identifier.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
XBERGAlefHandle xberg_registry_get(XBERGAlefHandle this_, const char *id);
/**
 * Materialize a `PresetSummary` list for the public registry endpoint.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *xberg_registry_summaries(XBERGAlefHandle this_);
/**
 * Number of presets currently loaded.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
uintptr_t xberg_registry_len(XBERGAlefHandle this_);
/**
 * Whether the registry contains zero presets.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
int32_t xberg_registry_is_empty(XBERGAlefHandle this_);
/**
 * Read raw sample bytes for `<preset_id>` from
 * `library/<id>/samples/<name>`. Returns `None` when the file is absent.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
int32_t xberg_registry_sample_bytes(XBERGAlefHandle this_,
                                    const char *preset_id, const char *name,
                                    uint8_t **out_ptr, uintptr_t *out_len,
                                    uintptr_t *out_cap);
/**
 * Load additional preset files from a runtime directory and insert them
 * into this registry.
 *
 * Reads every `*.json` file directly under `dir` (non-recursive),
 * validates each against the meta-schema, and inserts it. Files that fail
 * validation are rejected â the error is returned immediately and the
 * registry is left in a partially-updated state. Existing entries with the
 * same id are overwritten.
 *
 * Returns the number of presets successfully loaded from `dir`.
 *
 * # Use case
 *
 * This is the injection point for downstream catalogs that add curated
 * presets on top of the single embedded OSS preset.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
uintptr_t xberg_registry_extend_from_dir(XBERGAlefHandle this_,
                                         const char *dir);
/**
 * Free a `TokenCounter` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_token_counter_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_token_counter_new(void);
/**
 * Extract content from a single bytes or URI input.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
XBERGAlefHandle xberg_extract(XBERGAlefHandle input, XBERGAlefHandle config);
/**
 * Extract content from multiple bytes or URI inputs.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
XBERGAlefHandle xberg_extract_batch(const char *inputs, XBERGAlefHandle config);
/**
 * Find unmarked claims in markdown text.
 *
 * Returns lines that assert a claim but carry neither a footnote citation
 * anchor (`[^...]`) nor an inference marker (`[*inference*]`).
 *
 * The heuristic is simple: a line that contains alphabetic words, ends with
 * sentence punctuation, and is not a heading, blank line, or markup-only line
 * is considered a claim. Exclude lines that appear in the citation block (after
 * `---` + `<!-- citations ... -->`).
 * \param markdown The markdown text to search
 * \return A vector of trimmed line text strings for unmarked claims.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 * \code
 * let text = r#"This is a claim without citation.
 * Another claim with citation.[^1]
 * This is a claim with inference.[*inference*]
 *
 * [^1]: Citation"#;
 * let unmarked = find_unmarked_claims(text);
 * assert_eq!(unmarked.len(), 1);
 * assert!(unmarked[0].contains("without citation"));
 * \endcode
 */
char *xberg_find_unmarked_claims(const char *markdown);
/**
 * List names of all registered document extractors.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *xberg_list_document_extractors(void);
/**
 * List the names of all registered embedding backends.
 *
 * Used by `xberg-cli`, the api/mcp endpoints, and generated language
 * bindings.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *xberg_list_embedding_backends(void);
/**
 * List all registered OCR backends.
 *
 * Returns the names of all OCR backends currently registered in the global
 * registry.
 * \return A vector of OCR backend names.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 * \code
 * use xberg::plugins::list_ocr_backends;
 *
 * let backends = list_ocr_backends()?;
 * for name in backends {
 *     println!("Registered OCR backend: {}", name);
 * }
 * \endcode
 */
char *xberg_list_ocr_backends(void);
/**
 * List all registered post-processor names.
 *
 * Returns a vector of all post-processor names currently registered in the
 * global registry.
 * \return - `Ok(Vec<String>)` - Vector of post-processor names
 * - `Err(...)` if the registry lock is poisoned
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 * \code
 * use xberg::plugins::list_post_processors;
 *
 * let processors = list_post_processors()?;
 * for name in processors {
 *     println!("Registered post-processor: {}", name);
 * }
 * \endcode
 */
char *xberg_list_post_processors(void);
/**
 * List names of all registered renderers.
 * \note Returns an error if the registry lock is poisoned.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *xberg_list_renderers(void);
/**
 * List the names of all registered reranker backends.
 *
 * Used by `xberg-cli`, the api/mcp endpoints, and generated language
 * bindings.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *xberg_list_reranker_backends(void);
/**
 * List all supported document formats.
 *
 * Returns every file extension Xberg recognizes together with its
 * corresponding MIME type, derived from the central format registry.
 * Formats that have no registered file extension (such as source code,
 * which is detected dynamically) are not included.
 *
 * The static `EXT_TO_MIME` table lists every format the *codebase* knows how
 * to describe, regardless of which Cargo features were compiled in. Advertising
 * that table directly would claim support for extractors that may not exist in
 * this build (see GH#1387). To keep the advertised catalogue honest, the table
 * is intersected with the document extractor registry: an extension is only
 * included if some registered extractor actually claims its MIME type in this
 * build. This can never drift from reality and automatically covers
 * third-party extractors registered at runtime.
 *
 * The list is sorted alphabetically by file extension.
 * \return A vector of `SupportedFormat` entries sorted by extension, limited to
 * formats with a registered extractor in this build.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 * \code
 * use xberg::core::mime::list_supported_formats;
 *
 * let formats = list_supported_formats();
 * assert!(!formats.is_empty());
 * \endcode
 */
char *xberg_list_supported_formats(void);
/**
 * List the names of all registered tokenizer backends.
 *
 * Used by `xberg-cli`, the api/mcp endpoints, and generated language
 * bindings.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *xberg_list_tokenizer_backends(void);
/**
 * List names of all registered validators.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *xberg_list_validators(void);
/**
 * Discover all pages and sitemaps reachable from `uri` without extracting
 * document content.
 *
 * Builds a `crawlberg.CrawlEngine` from `config.crawl`, calls
 * `CrawlEngine.map`, and returns the set of discovered URLs as a
 * `crawlberg.MapResult` (re-exported as `MapResult`).
 *
 * Use this when you need the URL inventory of a site before committing to
 * full document extraction â e.g. to build a crawl queue or validate
 * scope.
 * \note Returns `Validation` if the crawl configuration fails
 * validation or if the map operation itself fails.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
XBERGAlefHandle xberg_map_url(const char *uri, XBERGAlefHandle config);
/**
 * Check whether a specific registered OCR backend supports a language.
 *
 * Delegates to the named backend's own `OcrBackend.supports_language`, which is
 * the correct
 * per-language decision â do not infer support (or its absence) from
 * whether `list_ocr_backend_capabilities` reports an empty
 * `supported_languages` list for that backend, since an empty list can mean
 * "does not enumerate" rather than "supports nothing" (see
 * `OcrBackendCapabilities.supported_languages`).
 * \param backend Name of a registered OCR backend, as returned by
 * `list_ocr_backends`. Lookup is case-insensitive and resolves the same
 * `paddleocr` alias as backend dispatch.
 * \param language Language code to check (e.g. `"eng"`, `"deu"`).
 * \note Returns an error if no backend with that name (or alias) is registered.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 * \code
 * use xberg::plugins::ocr_backend_supports_language;
 *
 * let supported = ocr_backend_supports_language("tesseract", "eng")?;
 * \endcode
 */
int32_t xberg_ocr_backend_supports_language(const char *backend,
                                            const char *language);
/**
 * Verify that an excerpt appears verbatim in source text.
 *
 * Performs exact matching by default. Also tries whitespace-normalized matching
 * (collapsing runs of whitespace on both sides) since PDF-extracted text often
 * has irregular spacing.
 * \param excerpt The text snippet to find
 * \param source_text The full source text to search
 * \return `true` if the excerpt appears (exactly or with normalized
 * whitespace), `false` otherwise.
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 * \code
 * let source = "The document states: Exact quoted text.";
 * let excerpt = "Exact quoted text";
 * assert!(verify_excerpt(excerpt, source));
 *
 * // Whitespace normalization
 * let source2 = "Text with  irregular   spacing.";
 * let excerpt2 = "Text with irregular spacing";
 * assert!(verify_excerpt(excerpt2, source2));
 * \endcode
 */
int32_t xberg_verify_excerpt(const char *excerpt, const char *source_text);