packages/crystal/src/xberg.cr


  # Extract content from a single bytes or URI input.
  fun extract = xberg_extract(input : ExtractInput*, config : ExtractionConfig*) : ExtractionResult*
  # Extract content from multiple bytes or URI inputs.
  fun extract_batch = xberg_extract_batch(inputs : LibC::Char*, config : ExtractionConfig*) : ExtractionResult*
  # Discover all pages and sitemaps reachable from `uri` without extracting document content.
  fun map_url = xberg_map_url(uri : LibC::Char*, config : UrlExtractionConfig*) : MapResult*
  # List all supported document formats.
  fun list_supported_formats = xberg_list_supported_formats() : LibC::Char*
  # Clear all embedding backends from the global registry.
  fun clear_embedding_backends = xberg_clear_embedding_backends() : Void
  # List the names of all registered embedding backends.
  fun list_embedding_backends = xberg_list_embedding_backends() : LibC::Char*
  # List names of all registered document extractors.
  fun list_document_extractors = xberg_list_document_extractors() : LibC::Char*
  # Clear all document extractors from the global registry.
  fun clear_document_extractors = xberg_clear_document_extractors() : Void
  # List all registered OCR backends.
  fun list_ocr_backends = xberg_list_ocr_backends() : LibC::Char*
  # Clear all OCR backends from the global registry.
  fun clear_ocr_backends = xberg_clear_ocr_backends() : Void
  # List all registered post-processor names.
  fun list_post_processors = xberg_list_post_processors() : LibC::Char*
  # Remove all registered post-processors.
  fun clear_post_processors = xberg_clear_post_processors() : Void
  # List names of all registered renderers.
  fun list_renderers = xberg_list_renderers() : LibC::Char*
  # Clear all renderers from the global registry.
  fun clear_renderers = xberg_clear_renderers() : Void
  # Clear all reranker backends from the global registry.
  fun clear_reranker_backends = xberg_clear_reranker_backends() : Void
  # List the names of all registered reranker backends.
  fun list_reranker_backends = xberg_list_reranker_backends() : LibC::Char*
  # Clear all tokenizer backends from the global registry.
  fun clear_tokenizer_backends = xberg_clear_tokenizer_backends() : Void
  # List the names of all registered tokenizer backends.
  fun list_tokenizer_backends = xberg_list_tokenizer_backends() : LibC::Char*
  # List names of all registered validators.
  fun list_validators = xberg_list_validators() : LibC::Char*
  # Remove all registered validators.
  fun clear_validators = xberg_clear_validators() : Void
  # Find unmarked claims in markdown text.
  fun find_unmarked_claims = xberg_find_unmarked_claims(markdown : LibC::Char*) : LibC::Char*
  # Verify that an excerpt appears verbatim in source text.
  fun verify_excerpt = xberg_verify_excerpt(excerpt : LibC::Char*, source_text : LibC::Char*) : Bool
  fun document_extractor_extract = xberg_document_extractor_extract(handle : Void*, input : ExtractInput*, config : ExtractionConfig*) : ExtractedDocument*
  fun document_extractor_supported_mime_types = xberg_document_extractor_supported_mime_types(handle : Void*) : LibC::Char*
  fun document_extractor_priority = xberg_document_extractor_priority(handle : Void*) : Int32
  fun document_extractor_can_handle = xberg_document_extractor_can_handle(handle : Void*, path : LibC::Char*, mime_type : LibC::Char*) : Bool
  fun document_extractor_free = xberg_document_extractor_free(handle : Void*) : Void
  fun embedding_backend_dimensions = xberg_embedding_backend_dimensions(handle : Void*) : LibC::SizeT
  fun embedding_backend_embed = xberg_embedding_backend_embed(handle : Void*, texts : LibC::Char*) : LibC::Char*
  fun embedding_backend_free = xberg_embedding_backend_free(handle : Void*) : Void
  fun meta_schema_compile = xberg_meta_schema_compile(meta_schema_json : LibC::Char*) : Void*
  fun meta_schema_parse_preset = xberg_meta_schema_parse_preset(handle : Void*, path : LibC::Char*, raw : LibC::Char*) : Preset*
  fun meta_schema_free = xberg_meta_schema_free(handle : Void*) : Void
  fun ocr_backend_process_image = xberg_ocr_backend_process_image(handle : Void*, image_bytes : LibC::Char*, config : OcrConfig*) : ExtractedDocument*
  fun ocr_backend_process_image_file = xberg_ocr_backend_process_image_file(handle : Void*, path : LibC::Char*, config : OcrConfig*) : ExtractedDocument*
  fun ocr_backend_supports_language = xberg_ocr_backend_supports_language(handle : Void*, lang : LibC::Char*) : Bool
  fun ocr_backend_backend_type = xberg_ocr_backend_backend_type(handle : Void*) : OcrBackendType*
  fun ocr_backend_supported_languages = xberg_ocr_backend_supported_languages(handle : Void*) : LibC::Char*
  fun ocr_backend_supports_table_detection = xberg_ocr_backend_supports_table_detection(handle : Void*) : Bool
  fun ocr_backend_supports_document_processing = xberg_ocr_backend_supports_document_processing(handle : Void*) : Bool
  fun ocr_backend_emits_structured_markdown = xberg_ocr_backend_emits_structured_markdown(handle : Void*) : Bool
  fun ocr_backend_process_document = xberg_ocr_backend_process_document(handle : Void*, path : LibC::Char*, config : OcrConfig*) : ExtractedDocument*
  fun ocr_backend_free = xberg_ocr_backend_free(handle : Void*) : Void
  fun plugin_name = xberg_plugin_name(handle : Void*) : LibC::Char*
  fun plugin_version = xberg_plugin_version(handle : Void*) : LibC::Char*
  fun plugin_initialize = xberg_plugin_initialize(handle : Void*) : Void
  fun plugin_shutdown = xberg_plugin_shutdown(handle : Void*) : Void
  fun plugin_description = xberg_plugin_description(handle : Void*) : LibC::Char*
  fun plugin_author = xberg_plugin_author(handle : Void*) : LibC::Char*
  fun plugin_free = xberg_plugin_free(handle : Void*) : Void
  fun post_processor_process = xberg_post_processor_process(handle : Void*, result : ExtractedDocument*, config : ExtractionConfig*) : Void
  fun post_processor_processing_stage = xberg_post_processor_processing_stage(handle : Void*) : ProcessingStage*
  fun post_processor_should_process = xberg_post_processor_should_process(handle : Void*, result : ExtractedDocument*, config : ExtractionConfig*) : Bool
  fun post_processor_estimated_duration_ms = xberg_post_processor_estimated_duration_ms(handle : Void*, result : ExtractedDocument*) : UInt64
  fun post_processor_priority = xberg_post_processor_priority(handle : Void*) : Int32
  fun post_processor_free = xberg_post_processor_free(handle : Void*) : Void
  fun registry_load_embedded = xberg_registry_load_embedded() : Void*
  fun registry_global = xberg_registry_global() : Void*
  fun registry_get = xberg_registry_get(handle : Void*, id : LibC::Char*) : Preset*
  fun registry_summaries = xberg_registry_summaries(handle : Void*) : LibC::Char*
  fun registry_len = xberg_registry_len(handle : Void*) : LibC::SizeT
  fun registry_is_empty = xberg_registry_is_empty(handle : Void*) : Bool
  fun registry_sample_bytes = xberg_registry_sample_bytes(handle : Void*, preset_id : LibC::Char*, name : LibC::Char*) : LibC::Char*
  fun registry_extend_from_dir = xberg_registry_extend_from_dir(handle : Void*, dir : LibC::Char*) : LibC::SizeT
  fun registry_free = xberg_registry_free(handle : Void*) : Void
  fun renderer_render_result = xberg_renderer_render_result(handle : Void*, result : ExtractedDocument*) : LibC::Char*
  fun renderer_free = xberg_renderer_free(handle : Void*) : Void
  fun reranker_backend_rerank = xberg_reranker_backend_rerank(handle : Void*, query : LibC::Char*, documents : LibC::Char*) : LibC::Char*
  fun reranker_backend_free = xberg_reranker_backend_free(handle : Void*) : Void
  fun token_counter_new = xberg_token_counter_new() : Void*
  fun token_counter_free = xberg_token_counter_free(handle : Void*) : Void
  fun tokenizer_backend_count_tokens = xberg_tokenizer_backend_count_tokens(handle : Void*, text : LibC::Char*) : LibC::SizeT
  fun tokenizer_backend_free = xberg_tokenizer_backend_free(handle : Void*) : Void
  fun validator_validate = xberg_validator_validate(handle : Void*, result : ExtractedDocument*, config : ExtractionConfig*) : Void
  fun validator_should_validate = xberg_validator_should_validate(handle : Void*, result : ExtractedDocument*, config : ExtractionConfig*) : Bool
  fun validator_priority = xberg_validator_priority(handle : Void*) : Int32
  fun validator_free = xberg_validator_free(handle : Void*) : Void
end

# xberg — Crystal bindings generated by alef.
#
# Ruby-style API over the Rust core: snake_case methods, PascalCase types,
# Rust-like generic containers (`Array(T)`, `Hash(K, V)`), and fiber/`Channel`
# based concurrency for async and streaming methods.
module Xberg
  VERSION = "1.0.0-rc.14"

  # Aggregate statistics for a xberg cache directory.
  class CacheStats
    include JSON::Serializable
    # Total number of files currently in the cache directory.
    getter total_files : UInt64 = 0
    # Combined size of all cache files in megabytes.
    getter total_size_mb : Float64 = 0.0
    # Free disk space available on the cache volume, in megabytes.
    getter available_space_mb : Float64 = 0.0
    # Age of the oldest cache file in days (0.0 if the cache is empty).
    getter oldest_file_age_days : Float64 = 0.0
    # Age of the most recently written cache file in days (0.0 if the cache is empty).
    getter newest_file_age_days : Float64 = 0.0
  end

  # Hardware acceleration configuration for ONNX Runtime models.
  #
  # Controls which execution provider (CPU, CoreML, CUDA, TensorRT) is used
  # for inference in layout detection and embedding generation.
  class AccelerationConfig
    include JSON::Serializable
    # Execution provider to use for ONNX inference.
    getter provider : ExecutionProviderType
    # GPU device ID (for CUDA/TensorRT). Ignored for CPU/CoreML/Auto.
    getter device_id : UInt32 = 0
  end

  # Configuration for the VLM captioning post-processor.
  class CaptioningConfig
    include JSON::Serializable
    # LLM configuration used for the VLM call.
    getter llm : LlmConfig
    # Optional custom caption prompt. `None` uses the default `RegionKind::Caption`
    # prompt that ships with `crate::llm::region_extractor`.
    getter prompt : String?
    # Skip images whose `width * height` is below this threshold (in pixels).
    # Default `1_000` filters out icons and decorations.
    getter min_image_area : UInt32 = 0
  end

  # Configuration for the page-classification post-processor.
  class PageClassificationConfig
    include JSON::Serializable
    # Minijinja prompt template. Receives `{{ labels }}` (joined list), `{{ page_text }}`
    # and `{{ multi_label }}` variables. `None` lets the backend pick a sensible default.
    getter prompt_template : String?
    # The set of labels the classifier may emit. Must contain at least one entry.
    getter labels : Array(String) = [] of String
    # Allow multiple labels per page. Single-label mode returns at most one label.
    getter multi_label : Bool = false
    # LLM configuration used for classification.
    getter llm : LlmConfig
  end
